--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -53,7 +53,7 @@
       </div>
       <hr>
       <footer>
-        <p>&copy; {{ site.time | date: '%Y' }}</p>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</p>
       </footer>
 
     </div>
