--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -3,7 +3,12 @@
 </div>
 
 <div class="row-fluid">
-  <div class="span12">
-    {{ content }}
-  </div>
+    <div class="span12">
+        {{ content }}
+    </div>
+    <div class="span12">
+        {% for post in site.posts limit: 5 %}
+        <div>{{ post.content}}</div>
+        {% endfor %}
+    </div>
 </div>
