--- a/assets/themes/twitter/css/syntax.css
+++ b/assets/themes/twitter/css/syntax.css
@@ -29,71 +29,4 @@ border-bottom: none !important;
 -webkit-border-top-right-radius: 10px;
 }
 
-/*
- * GitHub style for Pygments
- * Courtesy of GitHub.com
- */
-
-.hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
-.c { color: #999988; font-style: italic; }
-.err { color: #a61717; background-color: #e3d2d2; }
-.k { font-weight: bold; }
-.o { font-weight: bold; }
-.cm { color: #999988; font-style: italic; }
-.cp { color: #999999; font-weight: bold; }
-.c1 { color: #999988; font-style: italic; }
-.cs { color: #999999; font-weight: bold; font-style: italic; }
-.gd { color: #000000; background-color: #ffdddd; }
-.gd .x { color: #000000; background-color: #ffaaaa; }
-.ge { font-style: italic; }
-.gr { color: #aa0000; }
-.gh { color: #999999; }
-.gi { color: #000000; background-color: #ddffdd; }
-.gi .x { color: #000000; background-color: #aaffaa; }
-.go { color: #888888; }
-.gp { color: #555555; }
-.gs { font-weight: bold; }
-.gu { color: #800080; font-weight: bold; }
-.gt { color: #aa0000; }
-.kc { font-weight: bold; }
-.kd { font-weight: bold; }
-.kn { font-weight: bold; }
-.kp { font-weight: bold; }
-.kr { font-weight: bold; }
-.kt { color: #445588; font-weight: bold; }
-.m { color: #009999; }
-.s { color: #dd1144; }
-.n { color: #333333; }
-.na { color: teal; }
-.nb { color: #0086b3; }
-.nc { color: #445588; font-weight: bold; }
-.no { color: teal; }
-.ni { color: purple; }
-.ne { color: #990000; font-weight: bold; }
-.nf { color: #990000; font-weight: bold; }
-.nn { color: #555555; }
-.nt { color: navy; }
-.nv { color: teal; }
-.ow { font-weight: bold; }
-.w { color: #bbbbbb; }
-.mf { color: #009999; }
-.mh { color: #009999; }
-.mi { color: #009999; }
-.mo { color: #009999; }
-.sb { color: #dd1144; }
-.sc { color: #dd1144; }
-.sd { color: #dd1144; }
-.s2 { color: #dd1144; }
-.se { color: #dd1144; }
-.sh { color: #dd1144; }
-.si { color: #dd1144; }
-.sx { color: #dd1144; }
-.sr { color: #009926; }
-.s1 { color: #dd1144; }
-.ss { color: #990073; }
-.bp { color: #999999; }
-.vc { color: teal; }
-.vg { color: teal; }
-.vi { color: teal; }
-.il { color: #009999; }
-.gc { color: #999; background-color: #EAF2F5; }
+.highlight code,.highlight pre{color:#fdce93;background-color:#3f3f3f}.highlight .hll{background-color:#222}.highlight .c{color:#7f9f7f}.highlight .err{color:#e37170;background-color:#3d3535}.highlight .g{color:#7f9f7f}.highlight .k{color:#f0dfaf}.highlight .l{color:#ccc}.highlight .n{color:#dcdccc}.highlight .o{color:#f0efd0}.highlight .x{color:#ccc}.highlight .p{color:#41706f}.highlight .cm{color:#7f9f7f}.highlight .cp{color:#7f9f7f}.highlight .c1{color:#7f9f7f}.highlight .cs{color:#cd0000;font-weight:bold}.highlight .gd{color:#cd0000}.highlight .ge{color:#ccc;font-style:italic}.highlight .gr{color:red}.highlight .gh{color:#dcdccc;font-weight:bold}.highlight .gi{color:#00cd00}.highlight .go{color:gray}.highlight .gp{color:#dcdccc;font-weight:bold}.highlight .gs{color:#ccc;font-weight:bold}.highlight .gu{color:purple;font-weight:bold}.highlight .gt{color:#0040D0}.highlight .kc{color:#dca3a3}.highlight .kd{color:#ffff86}.highlight .kn{color:#dfaf8f;font-weight:bold}.highlight .kp{color:#cdcf99}.highlight .kr{color:#cdcd00}.highlight .kt{color:#00cd00}.highlight .ld{color:#cc9393}.highlight .m{color:#8cd0d3}.highlight .s{color:#cc9393}.highlight .na{color:#9ac39f}.highlight .nb{color:#efef8f}.highlight .nc{color:#efef8f}.highlight .no{color:#ccc}.highlight .nd{color:#ccc}.highlight .ni{color:#c28182}.highlight .ne{color:#c3bf9f;font-weight:bold}.highlight .nf{color:#efef8f}.highlight .nl{color:#ccc}.highlight .nn{color:#8fbede}.highlight .nx{color:#ccc}.highlight .py{color:#ccc}.highlight .nt{color:#9ac39f}.highlight .nv{color:#dcdccc}.highlight .ow{color:#f0efd0}.highlight .w{color:#ccc}.highlight .mf{color:#8cd0d3}.highlight .mh{color:#8cd0d3}.highlight .mi{color:#8cd0d3}.highlight .mo{color:#8cd0d3}.highlight .sb{color:#cc9393}.highlight .sc{color:#cc9393}.highlight .sd{color:#cc9393}.highlight .s2{color:#cc9393}.highlight .se{color:#cc9393}.highlight .sh{color:#cc9393}.highlight .si{color:#cc9393}.highlight .sx{color:#cc9393}.highlight .sr{color:#cc9393}.highlight .s1{color:#cc9393}.highlight .ss{color:#cc9393}.highlight .bp{color:#efef8f}.highlight .vc{color:#efef8f}.highlight .vg{color:#dcdccc}.highlight .vi{color:#ffffc7}.highlight .il{color:#8cd0d3}
