--- a/_includes/widgets/interactive-table.html
+++ b/_includes/widgets/interactive-table.html
@@ -4,25 +4,25 @@
         <input type="text" class="search form-control" placeholder="Search" />
     </div>
 
-    <div class="row" style="margin-left:0px">
-        <table class="table table-striped">
+    <div class="row" style="margin-left:0px;">
+        <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
-                <th style="width:40%;"><span class="sort" data-sort="image">Image</span></th>
-                <th style="width:30%;"><span class="sort" data-sort="product">Product Name</span></th>
-                <th style="width:20%;"><span class="sort" data-sort="description">Description</span></th>
+                <th style="width:20%;"><span class="sort" data-sort="image">Preview</span></th>
+                <th style="width:30%;"><span class="sort" data-sort="product">Product</span></th>
+                <th style="width:30%;"><span class="sort" data-sort="description">Description</span></th>
                 <th style="width:10%;"><span class="sort" data-sort="price">Price</span></th>
                 <th style="width:10%;"><span class="sort" data-sort="link">Link</span></th>
             </tr>
             </thead>
-            <tbody class="list" style="margin-left:0px">
+            <tbody class="list">
             {% for post in site.tags.accessoire %}
             <tr>
                 <td class="image"><img src="{{ post.preview }}"></td>
-                <td class="product"><a href="{{ % post % }}">{{ post.product }}<a/></td>
+                <td class="product"><a href="{{ post.url}}">{{ post.product }}</a></td>
                 <td class="description">{{ post.description}}</td>
                 <td class="price">{{ post.price }}</td>
-                <td class="link"><a href="{{ post.link }}">Shop Link</a></td>
+                <td class="link"><a href="{{ post.link }}">LINK</a></td>
             </tr>
             {% endfor %}
             </tbody>
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 
     var options = {
-        valueNames: ['name', 'city', 'category', 'tags']
+        valueNames: ['image', 'product', 'description', 'price', 'link']
     };
 
     var entryList = new List('entry-list', options);
