--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -14,7 +14,6 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script data-main="/assets/js/main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
 
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
@@ -65,5 +64,6 @@
     </div>
     {% include JB/analytics %}
 
+	<script src="/assets/js/main.js"></script>
   </body>
 </html>
