--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -64,6 +64,6 @@
     </div>
     {% include JB/analytics %}
 
-	<script src="/assets/js/main.js"></script>
+	<script type="text/javascript" src="/assets/js/main.js"></script>
   </body>
 </html>
