--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -66,6 +66,6 @@
     </div>
     {% include JB/analytics %}
 
-	<script type="text/javascript" src="/assets/js/main.js"></script>
+	<script data-main="/assets/js/main.js" src="/assets/js/LAB.min.js"></script>
   </body>
 </html>
