--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -66,6 +66,6 @@
     </div>
     {% include JB/analytics %}
 
-	<script src="/assets/js/main.js/"></script>
+	<script src="/assets/js/main.js"></script>
   </body>
 </html>
