edit for all pages

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -66,6 +66,10 @@
     </div>
     {% include JB/analytics %}
 
+    <!-- Path for GitHub edit -->
+    <div id="path" style="visibility:hidden">{{page.path}}</div>
+
+    <!-- Loading scripts -->
 	<script src="/assets/js/main.js"></script>
   </body>
 </html>
