--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -78,8 +78,8 @@
       </footer>
 
     </div>
-    {% include JB/analytics %}
-
 	<script src="/assets/js/main.js"></script>
+	<!-- for edits to know the path in the repository -->
+	<div id="path" style="visibility:hidden">{{page.path}}</div>
   </body>
 </html>
