--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -10,6 +10,7 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- script loader and init functions -->
 	<script src="/assets/js/main.js"></script>
 	
 	{% if site.enforce_ssl %}´
