--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -82,6 +82,6 @@
 
     </div>
 	<!-- for edits to know the path in the repository -->
-	<div id="path" style="visibility:hidden">{{page.path}}</div>
+	<div id="path" style="display:none">{{page.path}}</div>
   </body>
 </html>
