--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -76,7 +76,7 @@
 	  
 	  	<!-- for edits to know the path in the repository -->
 		<div id="path" style="display:none">{{page.path}}</div>
-	  <textarea id="content" style="visibility:hidden"></textarea>
+	  <textarea data-provide="markdown"  data-savable="true" id="content" style="visibility:hidden"></textarea>
 	  
 	  
         {% include widgets/comments/recentComments.html %}
