--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -76,7 +76,7 @@
 	  
 	  	<!-- for edits to know the path in the repository -->
 		<div id="path" style="display:none">{{page.path}}</div>
-	  <textarea data-provide="markdown"  data-savable="true" id="content" style="visibility:hidden"></textarea>
+	  <textarea rows="30" data-provide="markdown" data-iconlibrary="fa" data-savable="true" style="width:100%;visibility:hidden" id="content">
 	  
 	  
         {% include widgets/comments/recentComments.html %}
