--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -13,7 +13,7 @@
 	<div>
 		<!-- edit a page (activated if a ?edit=true was added to the address. Page path is the url to the post of the github repository -->
 		<div id="path" style="display:none">{{page.path}}</div>
-		<textarea id="content"></textarea>
+		<textarea id="target-editor"></textarea>
 	</div>
 	
 	
