--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -7,6 +7,9 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
+      <meta http-equiv="refresh" content="0; url={{site.github.url}}/">
+      <link rel="canonical" href="{{site.github.url}}" />
+
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -34,10 +37,12 @@
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
-
+      <script src="/assets/js/main.js"></script>
   </head>
 
   <body>
+  <!-- Loading scripts -->
+
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
@@ -68,8 +73,5 @@
 
     <!-- Path for GitHub edit -->
     <div id="path" style="visibility:hidden">{{page.path}}</div>
-
-    <!-- Loading scripts -->
-	<script src="/assets/js/main.js"></script>
   </body>
 </html>
