--- a/assets/templates/comments.mustache
+++ b/assets/templates/comments.mustache
@@ -18,7 +18,7 @@
                                     <a href="http://www.jquery2dotnet.com/2013/10/google-style-login-page-desing-usign.html">
                                         {{pageTitle}}</a>
                                     <div class="mic-info">
-                                        By: <a href="#">{{firstName}} {{lastName}}</a> on 2 Aug 2013
+                                        By: <a href="#">{{firstName}} {{lastName}}</a> {{keen.timestamp}}
                                     </div>
                                 </div>
                                 <div class="span2">
