--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -11,7 +11,9 @@
       {{ content }}
     </div>
 	<div>
-		<!-- edit a page (activated if a ?edit=true was added to the address. Page path is the url to the post of the github repository -->
+		<!-- edit a page (activated if a ?edit=true was added to the address.
+		Page path is the url to the post of the github repository -->
+
 		<div id="path" style="display:none">{{page.path}}</div>
 		<textarea id="target-editor" style="display:none"></textarea>
 	</div>
