--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -13,7 +13,7 @@
 	<!-- script loader and init functions -->
 	<script src="/assets/js/main.js"></script>
 	
-	{% if site.enforce_ssl %}´
+	{% if site.enforce_ssl %}
 		<!--
 		Redirect users to the https version of the website.
 		But: only check when on the production domain, as set in _config.yml.
@@ -26,19 +26,13 @@
 			window.location = window.location.toString().replace(/^http:/, "https:");
 		</script>
     {% endif %}
-	
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/assets/themes/bootstrap-3.1.1/css/darkly/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/assets/js/bootstrapMarkdown/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -55,33 +49,31 @@
 
   <body>
   <!-- Loading scripts -->
-
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container-narrow">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+  <div class="navbar navbar-default ">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+      </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+              {% assign pages_list = site.pages %}
+              {% assign group = 'navigation' %}
+              {% include JB/pages_list %}
           </ul>
-        </div>
+          <form class="navbar-form navbar-right">
+              <input class="form-control col-lg-8" placeholder="Search" type="text">
+          </form>
       </div>
-    </div>
+  </div>
+  <div class="container">
+  {{ content }}
 
-    <div class="container-narrow">
-
-      <div class="content">
-        {{ content }}
-      </div>
-        {% include widgets/comments/recentComments.html %}
-        {% include widgets/comments/form.html %}
-      <hr>
-      <footer>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</p>
-      </footer>
-
-    </div>
-
+  {% include widgets/comments/recentComments.html %}
+  {% include widgets/comments/form.html %}
+</div>
   </body>
 </html>
