--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -1,5 +1,4 @@
-<div class="row-fluid">
-    <div class="span12">
-        {{ content }}
-    </div>
+<div class="container">
+    {{ content }}
 </div>
+
