--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -28,7 +28,7 @@
     {% endif %}
 
     <!-- Le styles -->
-    <link href="/assets/themes/bootstrap-3.1.1/css/darkly/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/themes/bootstrap-3.1.1/css/lumen/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/assets/js/bootstrapMarkdown/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
@@ -50,7 +50,9 @@
   <body>
   <!-- Loading scripts -->
   <div class="navbar navbar-default ">
-      <div class="navbar-header">
+
+      <div class="container col-lg-7 col-centered" style="float:none">
+          <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -68,12 +70,11 @@
               <input class="form-control col-lg-8" placeholder="Search" type="text">
           </form>
       </div>
+      </div>
   </div>
-  <div class="container">
   {{ content }}
 
   {% include widgets/comments/recentComments.html %}
   {% include widgets/comments/form.html %}
-</div>
   </body>
 </html>
