--- a/_includes/widgets/interactive-table.html
+++ b/_includes/widgets/interactive-table.html
@@ -1,10 +1,10 @@
 <div id="entry-list">
 
-    <div class="row" style="margin-bottom:10px;margin-left:0px;">
+    <div style="">
         <input type="text" class="search form-control" placeholder="Search" />
     </div>
 
-    <div class="row" style="margin-left:0px;">
+    <div style="">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
