--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -21,7 +21,7 @@
 		<textarea id="target-editor" style="display:none"></textarea>
 	</div>
 	
-	
+	<!--
   {% unless page.categories == empty %}
     <ul class="tag_box inline">
       <li><i class="icon-folder-open"></i></li>
@@ -38,7 +38,8 @@
     </ul>
   {% endunless %}
 
-    <hr>
+    <hr>-->
+      <!--
     <div class="pagination">
       <ul>
       {% if page.previous %}
@@ -54,5 +55,5 @@
       {% endif %}
       </ul>
     </div>
-  </div>
+  </div>-->
 </div>
