--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -1,20 +1,38 @@
+<div class="row">
+    <div class="col-sm-2">
+        <legend>Feedback</legend>
+    </div>
 
-<form id="comment" class="form-horizontal" >
-    <fieldset>
-        <legend>Comment</legend>
-        <div class="form-group">
-            <label class="col-lg-2 control-label" for="name">Name</label>
-            <div class="col-lg-3">
-                <input class="form-control" id="name" placeholder="Your Name" type="text">
+    <div class="col-sm-10 contact-form">
+        <form id="comment" class="form" role="form">
+            <div class="row">
+                <div class="col-xs-6 col-md-6 form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                        <input class="form-control" id="name" name="name" placeholder="Your Name" type="text" required autofocus />
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-6 form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+                        <input class="form-control" id="email" name="email" placeholder="Mail Address" type="email" />
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="col-lg-2 control-label" for="name">Message</label>
-            <div class="col-lg-3">
+            <div class="input-group" >
+                <span class="input-group-addon" style="vertical-align: top"><span class="glyphicon glyphicon-comment" style="margin-top:3px"></span></span>
+                <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5"></textarea>
                 <input type="hidden" name="pageTitle" value="{{page.title}}">
-                <label for="textArea" class="form-control">Textarea</label>
+                <input type="hidden" name="pageUrl" value="{{page.url}}">
             </div>
-            <button type="submit" class="btn btn-primary pull-right">Send</button>
-        </div>
-    </fieldset>
-</form>
+            <br />
+            <div class="row">
+                <div class="col-xs-12 col-md-12 form-group">
+                    <button class="btn btn-primary pull-right" type="submit">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
