--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -12,13 +12,13 @@
     <div class="content">
       {{ content }}
     </div>
-	<div>
+	<div style="margin-bottom:10px">
 		<!-- edit a page (activated if a ?edit=true was added to the address.
 		Page path is the url to the post of the github repository -->
 
 		<div id="path" style="display:none">{{page.path}}</div>
         <div id="url" style="display:none">{{page.url}}</div>
-		<textarea id="target-editor" style="display:none"></textarea>
+		<textarea id="target-editor" style="display:none;"></textarea>
 	</div>
 	
 	<!--
