--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -63,7 +63,7 @@
                 {% include JB/pages_list %}
             </ul>
             <form class="navbar-form navbar-right" style="padding-right:0px">
-				<div style="text-align:right"><a href="" class="btn btn-warning btn-middle">Login with GitHub</a></div>
+				<div style="text-align:right"><a href="https://github.com/login/oauth/authorize" class="btn btn-warning btn-middle">Login with GitHub</a></div>
             </form>
         </div>
     </div>
