--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -1,6 +1,6 @@
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 <!DOCTYPE html>
-<html lang="en" id="myApp">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
@@ -44,7 +44,7 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 
-<body style="background-image: url(/assets/themes/patterns/paper.png); background-position: initial initial; background-repeat: initial initial;">
+<body style="background-image: url(/assets/themes/patterns/paper.png); background-position: initial initial; background-repeat: initial initial;" id="myApp">
 <!-- Loading scripts -->
 <div class="navbar navbar-default ">
     <div class="container col-lg-7 col-centered" style="float:none">
