--- a/_includes/widgets/comments/recentComments.html
+++ b/_includes/widgets/comments/recentComments.html
@@ -1,4 +1,6 @@
 {% include widgets/comments/recentComments.css %}
 <!-- entry template, would be better to load via get request -->
 
-<div id="comments"></div>
+<div data-ng-controller="CommentsCtrl">
+    <div data-ng-include data-src="'/assets/templates/comments.html'"></div>
+</div>
