--- a/assets/templates/comments.html
+++ b/assets/templates/comments.html
@@ -1,3 +1,4 @@
+<legend>Comments</legend>
 <div class="row">
     <div class="panel panel-default widget" style="margin-left:13px;margin-right:13px">
         <div class="panel-heading">
