--- a/assets/templates/comments.html
+++ b/assets/templates/comments.html
@@ -8,7 +8,7 @@
         </div>
         <div class="panel-body">
             <ul class="list-group">
-                <li class="list-group-item" ng:repeat="comment in comments.entries | limitTo:quantity | orderBy:sortorder:true">
+                <li class="list-group-item" ng:repeat="comment in comments.entries | orderObjectBy:'timestamp':true | limitTo:quantity">
                     <div class="row">
 
                         <div class="col-xs-10 col-md-11">
