--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -28,7 +28,7 @@
     <link href="/assets/themes/bootstrap-3.1.1/css/lumen/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/assets/js/bootstrapMarkdown/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/assets/js/bootstrap-markdown-2.3.1/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
 
 
     <!-- Le fav and touch icons -->
