--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,6 +75,6 @@
     {% include widgets/comments/form.html %}
 </div>
 <!-- script loader and init functions -->
-<script src="/assets/js/main.js"></script>
+<script src="/app/js/main.js"></script>
 </body>
 </html>
