--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -8,7 +8,7 @@
         </div>
         <div class="panel-body">
             <ul class="list-group">
-                <li class="list-group-item" ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
+                <li class="list-group-item" ng:repeat="comment in comments.entries">
                     <div class="row">
 
                         <div class="col-xs-10 col-md-11">
