--- a/app/partials/posts_table.html
+++ b/app/partials/posts_table.html
@@ -14,19 +14,12 @@
             </tr>
             </thead>
             <tbody class="list">
-            {% for post in site.categories.frontpage %}
-            <tr>
-                <td class="date">{{ post.date | date_to_string }} {% if post.preview %}<img width="150px" src="{{post.preview}}"{% endif %}</td>
+            <tr ng:repeat="post in posts.entries">
+                <td class="date">{{ post.date | date_to_string }}<img width="150px" src="{{post.preview}}"{% endif %}</td>
                 <td class="title"><a href="{{ post.url}}">{{ post.title }}</a></td>
-                <td class="tags">
-                    {% for tag in post.tags %}
-                        {{ tag }}
-                    {% endfor %}
-                </td>
+                <td class="tags"></td>
             </tr>
-            {% endfor %}
             </tbody>
         </table>
     </div>
-
 </div>
