--- a/app/partials/posts_table.html
+++ b/app/partials/posts_table.html
@@ -15,7 +15,7 @@
             </thead>
             <tbody class="list">
             <tr ng:repeat="post in posts.entries">
-                <td class="date">{{ post.date | date_to_string }}<img width="150px" src="{{post.preview}}"{% endif %}</td>
+                <td class="date">{{ post.date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.preview}}"</td>
                 <td class="title"><a href="{{ post.url}}">{{ post.title }}</a></td>
                 <td class="tags"></td>
             </tr>
