--- a/app/partials/posts_table.html
+++ b/app/partials/posts_table.html
@@ -15,9 +15,9 @@
             </thead>
             <tbody class="list">
             <tr ng:repeat="post in posts.entries">
-                <td class="date">{{ post.date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.preview}}"</td>
-                <td class="title"><a href="{{ post.url}}">{{ post.title }}</a></td>
-                <td class="tags"></td>
+                <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}"</td>
+                <td class="title"><a href="{{ post.url}}">{{ post.Title }}</a></td>
+                <td class="tags">{{ post.Tags }}</td>
             </tr>
             </tbody>
         </table>
