--- a/app/partials/posts_table.html
+++ b/app/partials/posts_table.html
@@ -15,7 +15,7 @@
             </thead>
             <tbody class="list">
             <tr ng:repeat="post in posts.entries">
-                <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-switch on="post.Preview"></td>
+                <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-hide="!{{post.Preview}}"></td>
                 <td class="title"><a href="{{ post.url}}">{{ post.Title }}</a></td>
                 <td class="tags">{{ post.Tags }}</td>
             </tr>
