--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -15,7 +15,7 @@
             </thead>
             <tbody class="list">
             <tr ng:repeat="post in posts.entries">
-                <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src='{{post.Preview}}' ng-show=="post.Preview"></td>
+                <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
                 <td class="tags">{{ post.Tags }}</td>
             </tr>
