--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,20 +1,28 @@
 <div id="entry-list">
 
     <div class="" style="">
-        <input type="text" class="search form-control" placeholder="Search" />
+        <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
 
     <div class= style="">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
-                <th style="width:20%;"><span class="sort" data-sort="date">Date</span></th>
+                <th style="width:20%;">
+                    <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
+                        Date
+                        <span ng-show="orderByField == 'Date'">
+                            <span ng-show="!reverseSort">^</span>
+                            <span ng-show="reverseSort">v</span>
+                        </span>
+                    </a>
+                </th>
                 <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">Tags</span></th>
             </tr>
             </thead>
             <tbody class="list">
-            <tr ng:repeat="post in posts.entries">
+            <tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
                 <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
                 <td class="tags">{{ post.Tags }}</td>
