--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -63,7 +63,8 @@
                 {% include JB/pages_list %}
             </ul>
             <form class="navbar-form navbar-right" style="padding-right:0px">
-                <div style="text-align:right"><a href="" class="btn btn-warning btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-click="loginWithGithub()">Login with GitHub</a></div>
+                <div style="text-align:right"><a href="" class="btn btn-warning btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-click="loginWithGithub()" ng-show="!user"></a></div>
+				<div style="text-align:right"><a href="" class="btn btn-success btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-show="user">{% raw %} {{user}} {% endraw %}</a></div>
             </form>
         </div>
     </div>
