--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -64,7 +64,7 @@
             </ul>
             <form class="navbar-form navbar-right" style="padding-right:0px">
                 <div style="text-align:right"><a href="" class="btn btn-warning btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-click="loginWithGithub()" ng-show="!user.name">Login with Github</a></div>
-				<div style="text-align:right"><a href="" class="btn btn-success btn-middle" id="oauthButton" ng-controller="GithubCtrl">{% raw %} {{user.name}} {% endraw %}</a></div>
+				<div style="text-align:right"><a href="" class="btn btn-success btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-show="user.name">{% raw %} {{user.name}} {% endraw %}</a></div>
             </form>
         </div>
     </div>
