--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -62,9 +62,9 @@
                 {% assign group = 'navigation' %}
                 {% include JB/pages_list %}
             </ul>
-            <form class="navbar-form navbar-right" style="padding-right:0px">
-                <div style="text-align:right"><a href="" class="btn btn-warning btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-click="loginWithGithub()" ng-show="!user">Login with Github</a></div>
-				<div style="text-align:right"><a href="" class="btn btn-success btn-middle" id="oauthButton" ng-controller="GithubCtrl" ng-show="user">{% raw %} {{user}} {% endraw %}</a></div>
+            <form class="navbar-form navbar-right" style="padding-right:0px" ng-controller="GithubCtrl">
+                <div style="text-align:right"><a href="" class="btn btn-warning btn-middle" id="oauthButton" ng-click="loginWithGithub()" ng-show="!user">Login with Github</a></div>
+				<div style="text-align:right"><a href="" class="btn btn-success btn-middle" id="oauthButton" ng-show="user">{% raw %} {{user}} {% endraw %}</a></div>
             </form>
         </div>
     </div>
